--- a/gold-admin-frontend/src/app/views/pages/broker/shop/product/product.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shop/product/product.component.html
@@ -1,10 +1,9 @@
 <kt-toastr #toastr></kt-toastr>
-
 <kt-portlet>
     <kt-portlet-body [class]="'kt-portlet__body--fit'">
         <div class="row card-container mt-4" *ngIf="product">
             <div class="col-md-4">
-                <div class="card p-2">
+                <div class="card p-2 justify-content-center">
                     <img class="mx-auto" *ngIf="product?.productImages.length == 0"
                         src="assets/media/icons/image-placeholder.png" alt="test" width="275px" height="315px">
                     <kt-image-preview-dialog *ngIf="product?.productImages.length" [viewImages]="imageArray"
