--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-calculator/tabs/final-loan-amount/final-loan-amount.component.html
@@ -7,13 +7,16 @@
                         <label for="" class="mandatory text-color">Gold Gross Weight </label>
                     </div>
                     <div class="col-6">
-                        <input type="number" class="form-control" formControlName="goldGrossWeight" min="0"
-                            (keypress)="rejectNegativeNumber($event)" placeholder="0.00 gram"
+                        <input type="number" class="form-control" formControlName="goldGrossWeight" min="0" placeholder="0.00 gram"
                             (blur)="weightCheck();calcGoldDeductionWeight()"
                             [class.isError]="controls.goldGrossWeight.touched && controls.goldGrossWeight.invalid">
                         <mat-error
                             *ngIf="controls.goldGrossWeight.errors?.required && controls.goldGrossWeight.touched">
                             Required field
+                        </mat-error>
+                        <mat-error
+                            *ngIf="controls.goldGrossWeight.errors?.pattern && controls.goldGrossWeight.touched">
+                            Invalid Input
                         </mat-error>
                     </div>
                 </div>
@@ -22,8 +25,7 @@
                         <label for="" class="mandatory text-color">Gold Deduction Weight </label>
                     </div>
                     <div class="col-6">
-                        <input type="text" class="form-control" formControlName="goldDeductionWeight" min="0"
-                            (keypress)="rejectNegativeNumber($event)" placeholder="0.00 gram"
+                        <input type="number" class="form-control" formControlName="goldDeductionWeight" min="0" placeholder="0.00 gram"
                             (blur)="weightCheck();calcGoldDeductionWeight()"
                             [class.isError]="controls.goldDeductionWeight.touched && controls.goldDeductionWeight.invalid">
                         <mat-error
@@ -31,8 +33,12 @@
                             Required field
                         </mat-error>
                         <mat-error
+                            *ngIf="controls.goldDeductionWeight.errors?.pattern && controls.goldDeductionWeight.touched">
+                            Invalid Input
+                        </mat-error>
+                        <mat-error
                             *ngIf="controls.goldDeductionWeight.errors?.weight && controls.goldDeductionWeight.touched">
-                            <small>Deduction Weight should be lesser then Gross Weight</small>
+                            <small>Deduction Weight should be lesser than Gross Weight</small>
                         </mat-error>
                     </div>
                 </div>
