--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -10,7 +10,7 @@
             <ng-template mat-tab-body>
 
             </ng-template>
-            <div class="row justify-content-around" [formGroupName]="idx"> 
+            <div class="row justify-content-around" [formGroupName]="idx">
                 <div class="col-9 kt-padding-l-45">
                     <div class="row justify-content-around">
                         <div class="col-6">
@@ -131,7 +131,7 @@
                                 <div class="col-4 form-label">
                                     <label *ngIf="ornament.controls.weightMachineZeroWeight.value"
                                         class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
-                                        (click)="preview(ornament.controls.weightMachineZeroWeight.value,idx)">View
+                                        (click)="preview(ornament.controls.weightMachineZeroWeightData.value,idx)">View
                                         Image</label>
                                     <mat-error class="kt-padding-l-10"
                                         *ngIf="ornament.controls.weightMachineZeroWeight.touched && ornament.controls.weightMachineZeroWeight.invalid">
@@ -166,7 +166,7 @@
                                 <div class="col-4 form-label">
                                     <label *ngIf="ornament.controls.withOrnamentWeight.value"
                                         class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
-                                        (click)="preview(ornament.controls.withOrnamentWeight.value,idx)">View
+                                        (click)="preview(ornament.controls.withOrnamentWeightData.value,idx)">View
                                         Image</label>
                                     <mat-error class="kt-padding-l-15"
                                         *ngIf="ornament.controls.withOrnamentWeight.touched && ornament.controls.withOrnamentWeight.invalid">
@@ -196,7 +196,7 @@
                                 <div class="col-4 form-label">
                                     <label *ngIf="ornament.controls.stoneTouch.value"
                                         class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
-                                        (click)="preview(ornament.controls.stoneTouch.value,idx)">View Image</label>
+                                        (click)="preview(ornament.controls.stoneTouchData.value,idx)">View Image</label>
                                     <mat-error class="kt-padding-l-10"
                                         *ngIf="ornament.controls.stoneTouch.touched && ornament.controls.stoneTouch.invalid">
                                         <span *ngIf="ornament.controls.stoneTouch.errors?.required">Upload Image</span>
@@ -227,7 +227,7 @@
                                 <div class="col-4 form-label">
                                     <label *ngIf="ornament.controls.acidTest.value"
                                         class="my-auto text-primary text-center kt-padding-l-15 kt-pointer"
-                                        (click)="preview(ornament.controls.acidTest.value,idx)">View Image</label>
+                                        (click)="preview(ornament.controls.acidTestData.value,idx)">View Image</label>
                                     <mat-error class="kt-padding-l-15"
                                         *ngIf="ornament.controls.acidTest.touched && ornament.controls.acidTest.invalid">
                                         <span *ngIf="ornament.controls.acidTest.errors?.required">Upload Image</span>
@@ -368,14 +368,15 @@
                 <div class="col-3 ">
                     <input type="file" #ornamentImage class="d-none"
                         (change)="uploadFile(idx,$event,'ornamentImageData')">
-                    <div class="img-container height220 kt-pointer" *ngIf="!ornament.controls.ornamentImage.value"
-                        (click)="webcam(idx,$event,'ornamentImage')">
+                    <div class="img-container height220 kt-pointer" *ngIf="!ornament.controls.ornamentImageData.value"
+                        (click)="webcam(idx,$event,'ornamentImageData')">
                         <img class="placeholder-image" src="../../../../../../assets/media/icons/image-placeholder.png"
                             alt="placeholder">
                     </div>
-                    <div class="img-container height220 bg-transparent" *ngIf="ornament.controls.ornamentImage.value">
-                        <img class="w-100" [src]="ornament.controls.ornamentImage.value" alt="placeholder"
-                            (click)="preview(ornament.controls.ornamentImage.value,idx)">
+                    <div class="img-container height220 bg-transparent"
+                        *ngIf="ornament.controls.ornamentImageData.value">
+                        <img class="w-100" [src]="ornament.controls.ornamentImageData.value" alt="placeholder"
+                            (click)="preview(ornament.controls.ornamentImageData.value,idx)">
                     </div>
                     <div class="form-label">
                         <label *ngIf="!ornament.controls.ornamentImage.value" class="my-auto m-auto pt-2">Upload
