--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/quick-pay/quick-pay.component.html
@@ -1,7 +1,72 @@
 <kt-portlet>
     <kt-portlet-body>
 
-        <div class="row kt-padding-t-5">
+        <div class="table-div kt-padding-t-10">
+            <table class="table outer-border">
+                <thead>
+                    <th class="transparent">Loan Id</th>
+                    <th class="transparent">Loan Amount</th>
+                    <th class="transparent">Loan Date</th>
+                    <th class="transparent">Scheme Name</th>
+                    <th class="transparent">Tenure</th>
+                    <th class="transparent">Interest Rate</th>
+                    <th class="transparent">Last Payment Date</th>
+                    
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="text-gray">Loan!@#$</td>
+                        <td class="text-gray">10000</td>
+                        <td class="text-gray">12,March 2020</td>
+                        <td class="text-gray">Permimun Super Loan</td>
+                        <td class="text-gray">6 Months</td>
+                        <td class="text-gray">5%</td>
+                        <td class="text-gray">20,May 2020</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="row justify-content-center kt-padding-t-25 kt-padding-b-15">
+            <div class="col-6 text-center">
+                <kt-button [value]="'Pay EMI'" [type]="'button'"></kt-button>
+                <span class="kt-padding-5 "></span>
+                <kt-button [value]="'View Interest EMI Logs'" [type]="'button'" (click)="viewEmiLogs()"></kt-button>
+                <span class="kt-padding-5 "></span>
+                <kt-button [value]="'View Part Payment EMI'" [type]="'button'"></kt-button>
+
+            </div>
+        </div>
+
+        <div class="row justify-content-center kt-padding-t-25 kt-padding-b-15">
+            <div class="col-8">
+                <div class="row border-style">
+                    <div class="col-3 form-label">
+                        <label for="" class="font-weight-500 m-0">Payable Amount</label>
+                    </div>
+                    <div class="col-2 form-label">
+                        <label for="" class="font-weight-500 m-0">54000</label>
+                    </div>
+                    <div class="col-4 form-label">
+                        <label for="" class="font-weight-500 m-0">Interest Payment Amount</label>
+                    </div>
+                    <div class="col-3 font-weight-500">
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row justify-content-center kt-padding-t-25">
+            <div class="col-6 text-center">
+                <kt-button [value]="'Proceed'" [type]="'button'"></kt-button>
+                <span class="kt-padding-5"></span>
+                <kt-button [value]="'Cancel'" [type]="'reset'"></kt-button>
+
+            </div>
+        </div>
+
+        <!-- <div class="row kt-padding-t-5">
             <div class="col-2 font-weight-500">Loan Id</div>
             <div class="col-2 font-weight-500">Loan Amount</div>
             <div class="col-2 font-weight-500">Loan Date</div>
@@ -21,9 +86,9 @@
                     5%
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <h5 class="kt-padding-t-20 kt-padding-b-20">Payment Interest EMI</h5>
+        <!-- <h5 class="kt-padding-t-20 kt-padding-b-20">Payment Interest EMI</h5>
 
         <div class="table-div">
             <table class="table outer-border">
@@ -68,36 +133,10 @@
                 <kt-button [value]="'View Interest EMI Logs'" [type]="'button'" (click)="viewEmiLogs()"></kt-button>
 
             </div>
-        </div>
+        </div> -->
 
 
-        <div class="row justify-content-center kt-padding-t-25 kt-padding-b-15">
-            <div class="col-8">
-                <div class="row border-style">
-                    <div class="col-3 form-label">
-                        <label for="" class="font-weight-500 m-0">Payable Amount</label>
-                    </div>
-                    <div class="col-2 form-label">
-                        <label for="" class="font-weight-500 m-0">54000</label>
-                    </div>
-                    <div class="col-4 form-label">
-                        <label for="" class="font-weight-500 m-0">Interest Payment Amount</label>
-                    </div>
-                    <div class="col-3 font-weight-500">
-                        <input type="text" class="form-control">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row justify-content-center kt-padding-t-25">
-            <div class="col-6 text-center">
-                <kt-button [value]="'Proceed'" [type]="'button'"></kt-button>
-                <span class="kt-padding-5"></span>
-                <kt-button [value]="'Cancel'" [type]="'reset'"></kt-button>
-
-            </div>
-        </div>
+        
         <h5 class="kt-padding-t-20 kt-padding-b-20">Payment Confirmation</h5>
         <div class="table-div">
             <table class="table outer-border">
