initial payment and shop page data count

--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/emi-details/emi-details-list/emi-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/emi-details/emi-details-list/emi-details-list.component.html
@@ -84,6 +84,12 @@
                         </div>
                     </mat-cell>
                 </ng-container>
+                <ng-container matColumnDef="emiInitialAmount">
+                    <mat-header-cell *matHeaderCellDef class="align-right">Initial Amount</mat-header-cell>
+                    <mat-cell *matCellDef="let element" class="align-right">
+                        {{element?.order?.orderdetails[0]?.initialPayment ? element?.order?.orderdetails[0]?.initialPayment : '-'}}
+                    </mat-cell>
+                </ng-container>
                 <ng-container matColumnDef="emiPaidAmount">
                     <mat-header-cell *matHeaderCellDef class="align-right">EMI Paid Amount</mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
