--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/bank-details/bank-details.component.html
@@ -130,7 +130,7 @@
                                 <div class="input-group mb-3">
                                     <input type="text" class="form-control" placeholder="Select File"
                                         aria-label="Recipient's username" aria-describedby="basic-addon2" readonly
-                                        formControlName="passbookProofImage"
+                                        formControlName="passbookProofImageName"
                                         [class.isError]="controls.passbookProof.touched && controls.passbookProof.invalid" />
                                     <div class="input-group-append">
                                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
@@ -144,16 +144,16 @@
                         <div class="row kt-margin-b-20">
                             <div class="col kt-padding-l-20 offset-4">
                                 <div class="row">
-                                    <div *ngIf="!controls.passbookProof.value.length" class="img-container"
+                                    <div *ngIf="!controls.passbookProofImage.value.length" class="img-container"
                                         style="width: 250px;">
-                                        <img *ngIf="!controls.passbookProof.value.length"
+                                        <img *ngIf="!controls.passbookProofImage.value.length"
                                             src="../../../../../../../assets/media/icons/image-placeholder.png"
                                             class="placeholder-image">
                                     </div>
         
-                                    <div *ngIf="controls.passbookProof.value.length" class="">
+                                    <div *ngIf="controls.passbookProofImage.value.length" class="">
                                         <div class="d-inline-block img-container kt-margin-r-15"
-                                            *ngFor="let proof of controls.passbookProof.value; index as idx;">
+                                            *ngFor="let proof of controls.passbookProofImage.value; index as idx;">
                                             <img class="fetched-image" [src]="proof">
                                             <img src="../../../../../assets/media/icons/cancel.svg" alt=""
                                                 class="kt-pointer remove-icon" (click)="removeImages(idx);">
