sms alert label

--- a/gold-admin-frontend/src/app/views/pages/admin/notification-settings/sms-alert/sms-alert-add/sms-alert-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/notification-settings/sms-alert/sms-alert-add/sms-alert-add.component.html
@@ -11,7 +11,7 @@
                     <div class="col-12 kt-margin-bottom-20-mobile">
                         <div class="row">
                             <div class="col-3 form-label">
-                                <mat-label class="mandatory">Event:</mat-label>
+                                <mat-label class="mandatory">Alert For:</mat-label>
                             </div>
                             <div class="col-9 p-0">
                                 <input class="form-control" formControlName="alertFor"
@@ -23,7 +23,7 @@
                         </div>
                         <div class="row kt-padding-t-15">
                             <div class="col-3 form-label">
-                                <mat-label class="mandatory">Text:</mat-label>
+                                <mat-label class="mandatory">Content:</mat-label>
                             </div>
                             <div class="col-9 p-0">
                                 <!-- <quill-editor formControlName="content"
