--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -53,6 +53,10 @@
                         </div>
                         <!-- </ng-template> -->
                     </mat-tab>
+                    <mat-tab label="Upload Documents">
+                        <kt-upload-loan-documents [loanId]="loanId"></kt-upload-loan-documents>
+                    </mat-tab>
+                    
                 </mat-tab-group>
             </div>
         </div>
