--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -38,34 +38,6 @@
             <div class="row kt-margin-t-15">
                 <div class="col-6">
                     <div class="row">
-                        <div class="col-4 form-label">
-                            <label class="text-color kt-padding-l-10">KYC Status</label>
-                        </div>
-                        <div class="col-3 form-label">
-                            <label class="text-color">{{controls.kycStatus.value | titlecase}}</label>
-                        </div>
-                        <div class="col-3 form-label">
-                            <label class="text-color kt-padding-l-10" (click)="viewKYC(26)">View</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6">
-                    <div class="row">
-                        <div class="col-4 offset-2 form-label">
-                            <label class="text-color kt-padding-l-10">Start Date</label>
-                        </div>
-                        <div class="col-6">
-                            <input type="text" class="form-control" formControlName="startDate"
-                                value="{{currentDate |  date:'mediumDate'}}" placeholder="4/5/2020" readonly>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row kt-margin-t-15">
-               
-                
-                <div class="col-6">
-                    <div class="row">
                         <div class="col-4  form-label">
                             <label class="text-color kt-padding-l-10 mandatory">Loan Purpose</label>
                         </div>
@@ -83,6 +55,35 @@
                         </div>
                     </div>
                 </div>
+               
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-4 offset-2 form-label">
+                            <label class="text-color kt-padding-l-10">Start Date</label>
+                        </div>
+                        <div class="col-6">
+                            <input type="text" class="form-control" formControlName="startDate"
+                                value="{{currentDate |  date:'mediumDate'}}" placeholder="4/5/2020" readonly>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row kt-margin-t-15">
+               
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-4 form-label">
+                            <label class="text-color kt-padding-l-10">KYC Status</label>
+                        </div>
+                        <div class="col-3 form-label">
+                            <label class="text-color">{{controls.kycStatus.value | titlecase}}</label>
+                        </div>
+                        <div class="col-3 form-label">
+                            <label class="kt-padding-r-15 ml-auto" (click)="viewKYC(26)">View</label>
+                        </div>
+                    </div>
+                </div>
+                
                 <!-- <div class="col-6">
                     <div class="row" *ngIf="controls.panType.value=='pan'">
                         <div class="col-4 offset-2 form-label">
