dashboard and view in broker

--- a/gold-admin-frontend/src/app/views/pages/broker/dashboard/dashboard.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/dashboard/dashboard.component.html
@@ -121,7 +121,7 @@
 		</div>
 		<div class="row pt-5">
 			<div class="col-12">
-				<h4>Overdue Customer</h4>
+				<h4>Overdue Payment</h4>
 				<hr>
 			</div>
 			<div class="col-12">
